--- a/package.json
+++ b/package.json
@@ -6,22 +6,36 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "license:add": "node scripts/add-license.js",
+    "license:check": "node scripts/add-license.js --check"
   },
   "dependencies": {
+    "geist": "^1.4.2",
+    "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
-  }
+    "tailwindcss": "^4",
+    "typescript": "^5"
+  },
+  "description": "Portfolio Of LunarcatOwO",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LunarcatOwO/portfolio-v2.git"
+  },
+  "author": "LunarcatOwO",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/LunarcatOwO/portfolio-v2/issues"
+  },
+  "homepage": "https://github.com/LunarcatOwO/portfolio-v2#readme"
 }
