--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,13 @@ services:
     restart: unless-stopped
     labels:
       - "com.centurylabs.watchtower.enable=true"
-      - "com.centurylabs.watchtower.scope=portfolio-v2"
+      - "com.centurylabs.watchtower.scope=portfoliov2"
   watchtower:
-    image: containrrr/watchtower:latest
-    command: --interval 60 --cleanup --rolling-restart --scope portfolio-v2 --labels-enable
+    image: containrrr/watchtower
+    container_name: nyabot-watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    command: --interval 60 --cleanup --rolling-restart --scope portfoliov2 --label-enable
     restart: always
     environment:
       - WATCHTOWER_POLL_INTERVAL=60
