--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,14 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
+            - name: Run tests with coverage
+              run: npm test
+
+            - name: Upload coverage reports to Codecov
+              uses: codecov/codecov-action@v5
+              with:
+                  token: ${{ secrets.CODECOV_TOKEN }}
+
             # Next.js CI build caching: re-use the incremental compiler cache to speed up builds
             # Ref: https://nextjs.org/docs/app/guides/ci-build-caching
             - name: Restore Next.js cache
