--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@codecov/nextjs-webpack-plugin": "^1.9.1",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
