--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@sentry/nextjs": "^10.10.0",
     "geist": "^1.4.2",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "simple-icons": "^15.14.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
