--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sentry/nextjs": "^10.10.0",
+    "framer-motion": "^12.23.12",
     "geist": "^1.4.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
