--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm install
 
       - name: Update packages
-        run: npm run update-packages
+        run: npx ncu -u && npm install
 
       - name: Commit and push changes
         run: |
