chore: Updated Packages

--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "build:webpack": "next build",
     "start": "next start",
     "lint": "eslint",
-    "update-packages": "npx node-check-updates -u && npm install"
+    "update-packages": "npx npm-check-updates -u && npm install"
   },
   "dependencies": {
-    "@sentry/nextjs": "^10.11.0",
+    "@sentry/nextjs": "^10.20.0",
     "geist": "^1.5.1",
-    "lucide-react": "^0.544.0",
-    "motion": "^12.23.12",
-    "next": "^15.5.3",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "simple-icons": "^15.14.0"
+    "lucide-react": "^0.546.0",
+    "motion": "^12.23.24",
+    "next": "^15.5.6",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "simple-icons": "^15.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,8 +26,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
-    "node-check-updates": "^0.1.9",
+    "eslint-config-next": "15.5.6",
+    "npm-check-updates": "^0.1.9",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
