--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,12 @@
 name: Build and Push Docker Image
 
 on:
+    push:
+        branches:
+            - "*"
     pull_request:
         branches:
             - master
-    # Run after package updates workflow completes
-    workflow_run:
-        workflows: ["Update Packages"]
-        types:
-            - completed
-        branches:
-            - "*"
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
